--- a/dh.cform.openvpn.yaml
+++ b/dh.cform.openvpn.yaml
@@ -11,13 +11,13 @@ Resources:
         Type: AWS::EC2::VPC
         Properties:
             CidrBlock: 172.16.0.0/16
-            EnableDnsHostnames: true
-            EnableDnsSupport: true
+            EnableDnsHostnames: 'true'
+            EnableDnsSupport: 'true'
             Tags:
-            -   Key: Name
-                Value: VPN.VPC
-            -   Key: Application
-                Value: OpenVPN
+            -   Key: "Name"
+                Value: "VPN.VPC"
+            -   Key: "Application"
+                Value: "OpenVPN"
 #-------------------------------------------
 
 #===========================================
@@ -30,10 +30,10 @@ Resources:
         Type: AWS::EC2::InternetGateway
         Properties:
             Tags:
-            -   Key: Name
-                Value: VPN.IGW
-            -   Key: Application
-                Value: OpenVPN
+            -   Key: "Name"
+                Value: "VPN.IGW"
+            -   Key: "Application"
+                Value: "OpenVPN"
     AttachInternetGateway:
         Type: AWS::EC2::VPCGatewayAttachment
         Properties:
@@ -51,13 +51,13 @@ Resources:
             VpcId:
                 !Ref VPC
             CidrBlock: 172.16.128.0/20
-            AvailabilityZone: eu-central-1a
-            MapPublicIpOnLaunch: true
+            AvailabilityZone: "eu-central-1a"
+            MapPublicIpOnLaunch: 'true'
             Tags:
-            -   Key: Name
-                Value: VPN.PubAZ1
-            -   Key: Application
-                Value: OpenVPN
+            -   Key: "Name"
+                Value: "VPN.PublicAZ1"
+            -   Key: "Application"
+                Value: "OpenVPN"
 #-------------------------------------------
 
 #--- Public Subnet Route Table
@@ -68,10 +68,10 @@ Resources:
             VpcId:
                 !Ref VPC
             Tags:
-            -   Key: Name
-                Value: VPN.Public
-            -   Key: Application
-                Value: OpenVPN
+            -   Key: "Name"
+                Value: "VPN.Public"
+            -   Key: "Application"
+                Value: "OpenVPN"
     PublicSubnetRoute:
         DependsOn: AttachInternetGateway
         Type: AWS::EC2::Route
@@ -123,12 +123,12 @@ Resources:
             VpcId:
                 !Ref VPC
             CidrBlock: 172.16.0.0/19
-            AvailabilityZone: eu-central-1a
+            AvailabilityZone: "eu-central-1a"
             Tags:
-            -   Key: Name
-                Value: VPN.PrivAZ1
-            -   Key: Application
-                Value: OpenVPN
+            -   Key: "Name"
+                Value: "VPN.PrivateAZ1"
+            -   Key: "Application"
+                Value: "OpenVPN"
 #-------------------------------------------
 
 #--- Private Subnet Route Table
@@ -139,10 +139,10 @@ Resources:
             VpcId:
                 !Ref VPC
             Tags:
-            -   Key: Name
-                Value: VPN.PrivAZ1
-            -   Key: Application
-                Value: OpenVPN
+            -   Key: "Name"
+                Value: "VPN.PrivateAZ1"
+            -   Key: "Application"
+                Value: "OpenVPN"
     PrivateSubnetAZ1Route:
         Type: AWS::EC2::Route
         Properties:
@@ -174,10 +174,10 @@ Resources:
                 !Ref VPC
             GroupDescription: OpenVPN PublicSecurityGroup
             Tags:
-            -   Key: Name
-                Value: VPN.SG-Public
-            -   Key: Application
-                Value: OpenVPN
+            -   Key: "Name"
+                Value: "VPN.SG-Public"
+            -   Key: "Application"
+                Value: "OpenVPN"
             SecurityGroupIngress:
             -   Description: SSH External
                 IpProtocol: tcp
@@ -214,10 +214,10 @@ Resources:
                 !Ref VPC
             GroupDescription: OpenVPN PrivateSecurityGroup
             Tags:
-            -   Key: Name
-                Value: VPN.SG-Private
-            -   Key: Application
-                Value: OpenVPN
+            -   Key: "Name"
+                Value: "VPN.SG-Private"
+            -   Key: "Application"
+                Value: "OpenVPN"
     PrivateInboundRuleSSH:
         Type: AWS::EC2::SecurityGroupIngress
         Properties:
@@ -238,3 +238,320 @@ Resources:
           ToPort: -1
           SourceSecurityGroupId:
             !GetAtt PublicSecurityGroup.GroupId
+#-------------------------------------------
+
+#===========================================
+# NACL DEFINITIONS
+#===========================================
+
+#--- Public NACL Group
+#-------------------------------------------
+    PublicNAcl:
+        Type: AWS::EC2::NetworkAcl
+        Properties:
+            VpcId:
+                !Ref VPC
+            Tags:
+            -   Key: "Name"
+                Value: "VPN.PublicNAcl"
+            -   Key: "Application"
+                Value: "OpenVPN"
+#-------------------------------------------
+    PublicSubetNAclAssociation:
+        Type: AWS::EC2::SubnetNetworkAclAssociation
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            SubnetId:
+                !Ref PublicSubnetAZ1
+#--- Ingress Public NACL Group
+#-------------------------------------------
+    PublicNAclIngress10:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 10
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 10.0.0.0/16
+            PortRange:
+                From: 80
+                To: 80
+#-------------------------------------------
+    PublicNAclIngress11:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 11
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 10.0.0.0/16
+            PortRange:
+                From: 443
+                To: 443
+#-------------------------------------------
+    PublicNAclIngress50:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 50
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 22
+                To: 22
+#-------------------------------------------
+    PublicNAclIngress60:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 60
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 1194
+                To: 1194
+#-------------------------------------------
+    PublicNAclIngress61:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 61
+            Protocol: 17
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 1194
+                To: 1194
+#-------------------------------------------
+    PublicNAclIngress62:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 62
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 1024
+                To: 65535
+#-------------------------------------------
+    PublicNAclIngress63:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 63
+            Protocol: 17
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 1024
+                To: 65535
+#-------------------------------------------
+    PublicNAclIngress70:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 70
+            Protocol: 1
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            Icmp:
+                Type: 8
+                Code: -1
+#-------------------------------------------
+    PublicNAclIngress71:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 71
+            Protocol: 1
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            Icmp:
+                Type: 0
+                Code: -1
+#-------------------------------------------
+    PublicNAclIngress100:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'false'
+            RuleNumber: 100
+            Protocol: -1
+            RuleAction: deny
+            CidrBlock: 0.0.0.0/0
+#--- Egress Public NACL Group
+#-------------------------------------------
+    PublicNAclEgress10:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 10
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 10.0.0.0/16
+            PortRange:
+                From: 22
+                To: 22
+#-------------------------------------------
+    PublicNAclEgress50:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 50
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 80
+                To: 80
+#-------------------------------------------
+    PublicNAclEgress51:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 51
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 443
+                To: 443
+#-------------------------------------------
+    PublicNAclEgress52:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 52
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 22
+                To: 22
+#-------------------------------------------
+    PublicNAclEgress53:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 53
+            Protocol: 17
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 53
+                To: 53
+#-------------------------------------------
+    PublicNAclEgress54:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 54
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 53
+                To: 53
+#-------------------------------------------
+    PublicNAclEgress60:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 60
+            Protocol: 6
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 1024
+                To: 65535
+#-------------------------------------------
+    PublicNAclEgress61:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 61
+            Protocol: 17
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            PortRange:
+                From: 1024
+                To: 65535
+#-------------------------------------------
+    PublicNAclEgress70:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 70
+            Protocol: 1
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            Icmp:
+                Type: 8
+                Code: -1
+#-------------------------------------------
+    PublicNAclEgress71:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 71
+            Protocol: 1
+            RuleAction: allow
+            CidrBlock: 0.0.0.0/0
+            Icmp:
+                Type: 0
+                Code: -1
+#-------------------------------------------
+    PublicNAclEgress100:
+        Type: AWS::EC2::NetworkAclEntry
+        Properties:
+            NetworkAclId:
+                !Ref PublicNAcl
+            Egress: 'true'
+            RuleNumber: 100
+            Protocol: -1
+            RuleAction: deny
+            CidrBlock: 0.0.0.0/0
+
