--- a/dh.cform.openvpn-sg.yaml
+++ b/dh.cform.openvpn-sg.yaml
@@ -1,6 +1,6 @@
-# https://s3.eu-central-1.amazonaws.com/dh.cform-templates/openvpn/dh.cform.openvpn-nacl.yaml
+# https://s3.eu-central-1.amazonaws.com/dh.cform-templates/openvpn/dh.cform.openvpn-sg.yaml
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'Security groups for personal OpenVPN Instance.'
+Description: 'Nested Stack: SGDefs. Security Groups Definitions'
 
 Metadata: {}
 Conditions: {}
@@ -15,9 +15,9 @@ Parameters:
     Description: VPC to create the SG into.
     Type: AWS::EC2::VPC::Id
 #-------------------------------------------
-  ApplicationName:
-    Description: The Application Name
-    Type: String
+#  ApplicationName:
+#    Description: The Application Name
+#    Type: String
 #-------------------------------------------
 
 
