--- a/dh.cform.openvpn-vpc.yaml
+++ b/dh.cform.openvpn-vpc.yaml
@@ -1,6 +1,6 @@
 # https://s3.eu-central-1.amazonaws.com/dh.cform-templates/openvpn/dh.cform.openvpn-vpc.yaml
 AWSTemplateFormatVersion: '2010-09-09'
-Description: 'VPC Dual AZ Public-Private'
+Description: 'Nested Stack: VPCDef. VPC & Multi AZ Public-Private Subnet Definitions'
 
 Metadata: {}
 Conditions: {}
@@ -9,46 +9,25 @@ Conditions: {}
 Parameters:
 #===========================================
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# SUBNET CIDR DEFINITIONS
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
+#--- CIDR Strings
+#-------------------------------------------
   VPCCIDR:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
-    Default: 10.0.0.0/16
     Description: CIDR Block for the VPC
     Type: String
-#--- AZ-A Public Subnet
 #-------------------------------------------
   PublicSubnetACIDR:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
-    Default: 10.0.128.0/20
     Description: CIDR Block for the public DMZ subnet A located in Availability Zone A.
     Type: String
-#--- AZ-B Public Subnet
 #-------------------------------------------
   PublicSubnetBCIDR:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
-    Default: 10.0.144.0/20
     Description: CIDR Block for the public DMZ subnet B located in Availability Zone B
     Type: String
-#--- AZ-A Private Subnet
 #-------------------------------------------
   PrivateSubnetACIDR:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
-    Default: 10.0.0.0/19
     Description: CIDR block for private subnet A located in Availability Zone A.
     Type: String
-#--- AZ-B Private Subnet
 #-------------------------------------------
   PrivateSubnetBCIDR:
-    AllowedPattern: ^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])(\/(1[6-9]|2[0-8]))$
-    ConstraintDescription: CIDR block parameter must be in the form x.x.x.x/16-28
-    Default: 10.0.32.0/19
     Description: CIDR block for private subnet B located in Availability Zone B.
     Type: String
 #-------------------------------------------
@@ -63,7 +42,7 @@ Resources:
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
-#---Top Level VPC Definition
+#--- VPC Definition
 #-------------------------------------------
   VPC:
     Type: 'AWS::EC2::VPC'
@@ -152,6 +131,7 @@ Resources:
           - '1'
           - 'Fn::GetAZs':
               Ref: 'AWS::Region'
+#-------------------------------------------
 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -243,6 +223,7 @@ Resources:
         Ref: RouteTablePrivateB
       NatGatewayId:
         Ref: NatGw1
+#-------------------------------------------
 
 
 #~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
@@ -255,6 +236,7 @@ Resources:
   Igw:
     Type: 'AWS::EC2::InternetGateway'
     Properties: {}
+#-------------------------------------------
   IGWAttachment:
     Type: 'AWS::EC2::VPCGatewayAttachment'
     Properties:
@@ -262,6 +244,7 @@ Resources:
         Ref: VPC
       InternetGatewayId:
         Ref: Igw
+
 
 #--- NAT Gateway
 #-------------------------------------------
@@ -274,9 +257,7 @@ Resources:
         'Fn::GetAtt':
           - NatGw1ElasticIP
           - AllocationId
-      Tags:
-        - Key: Name
-          Value: NAT GW A
+#-------------------------------------------
   NatGw1ElasticIP:
     Type: 'AWS::EC2::EIP'
     Properties:
@@ -284,102 +265,53 @@ Resources:
 #-------------------------------------------
 
 
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-# NESTED STACKS
-#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-
-
-#--- Public/Private NACLs
-#-------------------------------------------
-  NaclDefs:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      TemplateURL: https://s3.eu-central-1.amazonaws.com/dh.cform-templates/openvpn/dh.cform.openvpn-nacl.yaml
-      Parameters:
-        VPCID:
-          Ref: VPC
-        PublicSubnetIdA:
-          Ref: PublicSubnetA
-        PublicSubnetIdB:
-          Ref: PublicSubnetB
-        PrivateSubnetIdA:
-          Ref: PrivateSubnetA
-        PrivateSubnetIdB:
-          Ref: PrivateSubnetB
-      TimeoutInMinutes: 5
-#-------------------------------------------
-
-#--- Public/Private Security Groups
-#-------------------------------------------
-  SGDefs:
-    Type: AWS::CloudFormation::Stack
-    Properties:
-      TemplateURL: https://s3.eu-central-1.amazonaws.com/dh.cform-templates/openvpn/dh.cform.openvpn-sg.yaml
-      Parameters:
-        VPCID:
-          Ref: VPC
-        ApplicationName:
-          Ref: AWS::StackName
-      TimeoutInMinutes: 5
-#-------------------------------------------
-
-
 Outputs:
 #===========================================
 
 
-#---Top Level VPC CIDR Export
-#-------------------------------------------
-  VPCCIDR:
-    Description: VPC CIDR
-    Value:
-      Ref: VPCCIDR
-    Export:
-      Name:
-        Fn::Sub: ${AWS::StackName}-VPCCIDR
 #---Top Level VPCID Export
 #-------------------------------------------
   VPCID:
     Description: VPC ID
     Value:
       Ref: VPC
-    Export:
-      Name:
-        Fn::Sub: ${AWS::StackName}-VPCID
+#    Export:
+#      Name:
+#        Fn::Sub: ${AWS::StackName}-VPCID
 #---Public Subnet AZ-A Export
 #-------------------------------------------
   PublicSubnetIdA:
     Description: Public Subnet ID AZ-A
     Value:
       Ref: PublicSubnetA
-    Export:
-      Name: 
-        Fn::Sub: ${AWS::StackName}-PublicSubnetIdA
+#    Export:
+#      Name: 
+#        Fn::Sub: ${AWS::StackName}-PublicSubnetIdA
 #---Public Subnet AZ-B Export
 #-------------------------------------------
   PublicSubnetIdB:
     Description: Public Subnet ID AZ-B
     Value:
       Ref: PublicSubnetB
-    Export:
-      Name: 
-        Fn::Sub: ${AWS::StackName}-PublicSubnetIdB
+#    Export:
+#      Name: 
+#        Fn::Sub: ${AWS::StackName}-PublicSubnetIdB
 #---Private Subnet AZ-A Export
 #-------------------------------------------
   PrivateSubnetIdA:
     Description: Private Subnet ID AZ-A
     Value:
       Ref: PrivateSubnetA
-    Export:
-      Name: 
-        Fn::Sub: ${AWS::StackName}-PrivateSubnetIdA
+#    Export:
+#      Name: 
+#        Fn::Sub: ${AWS::StackName}-PrivateSubnetIdA
 #---Private Subnet AZ-B Export
 #-------------------------------------------
   PrivateSubnetIdB:
     Description: Private Subnet ID AZ-B
     Value:
       Ref: PrivateSubnetB
-    Export:
-      Name: 
-        Fn::Sub: ${AWS::StackName}-PrivateSubnetIdB
+#    Export:
+#      Name: 
+#        Fn::Sub: ${AWS::StackName}-PrivateSubnetIdB
 #-------------------------------------------
