Nested private subnet launch template working with EC2 instance declaration functioning off of this.

--- a/dh.cform.openvpn-launch-priv.yaml
+++ b/dh.cform.openvpn-launch-priv.yaml
@@ -45,10 +45,10 @@ Resources:
   PrivateLaunchTemplate:
     Type: "AWS::EC2::LaunchTemplate"
     Properties:
-      LaunchTemplateName: "dh.cform.openvpn-private-launch-template"
+      LaunchTemplateName: "dh.cform.openvpn-launch-tmplt-priv"
       LaunchTemplateData:
-        IamInstanceProfile: 
-          Arn: "arn:aws:iam::255822906044:instance-profile/dh.InstProfile.Managed.SysAdmin"
+#        IamInstanceProfile:
+#          Arn: "arn:aws:iam::255822906044:instance-profile/dh.InstProfile.Managed.SysAdmin"
         SecurityGroupIds: 
         - !Ref PrivateSgResourceId
         ImageId: "ami-0d4c3eabb9e72650a"
@@ -72,6 +72,19 @@ Resources:
 
 
 
-Outputs: {}
-#Outputs:
+#Outputs: {}
+Outputs:
 #===========================================
+
+
+#---Top Level VPCID Export
+#-------------------------------------------
+  PrivLaunchTmpltId:
+    Description: ID of the launch template.
+    Value:
+      Ref: PrivateLaunchTemplate
+#    Export:
+#      Name:
+#        Fn::Sub: ${AWS::StackName}-VPCID
+#---Public Subnet AZ-A Export
+#-------------------------------------------
