--- a/dh.cform.openvpn-vpc.yaml
+++ b/dh.cform.openvpn-vpc.yaml
@@ -307,6 +307,7 @@ Resources:
 #-------------------------------------------
 
 
+#Outputs: {}
 Outputs:
 #===========================================
 
