--- a/dh.cform.openvpn-nacl.yaml
+++ b/dh.cform.openvpn-nacl.yaml
@@ -260,6 +260,24 @@ Resources:
       Protocol: -1
       RuleAction: deny
       CidrBlock: 0.0.0.0/0
+#-------------------------------------------
+# Temporary for Web Access Test
+############################################
+  PublicNAclIngress01:
+    Type: AWS::EC2::NetworkAclEntry
+    Properties:
+      NetworkAclId:
+        Ref: PublicNAcl
+      Egress: 'false'
+      RuleNumber: 1
+      Protocol: 6
+      RuleAction: allow
+      CidrBlock: 0.0.0.0/0
+      PortRange:
+        From: 80
+        To: 80
+############################################
+
 #--- Egress Public NACL Group
 #-------------------------------------------
   PublicNAclEgress10:
