--- a/dh.cform.openvpn-sg.yaml
+++ b/dh.cform.openvpn-sg.yaml
@@ -80,6 +80,13 @@ Resources:
           ToPort: -1
           CidrIp: 
             Ref: VPCCIDR
+############################################
+        - Description: httpd access (temporary)
+          IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+############################################
 
 #--- Private Subnet Security Group
 #-------------------------------------------
