--- a/dh.cform.openvpn-launch-pub.yaml
+++ b/dh.cform.openvpn-launch-pub.yaml
@@ -67,7 +67,38 @@ Resources:
           - 
             Key: "Name"
             Value: "openvpn-public"
-        UserData: ""
+        UserData:
+          Fn::Base64:
+            !Sub |
+              #!/bin/bash -xe
+              # Update Packages, inc. aws-cfn-bootstrap
+              yum update -y
+              # Start cfn-init
+              /opt/aws/bin/cfn-init -v -s ${AWS::StackId} -r PublicLaunchTemplate --region ${AWS::Region} || error_exit 'Failed to run cfn-init'
+              # Start up the cfn-hup daemon to listen for changes to the EC2 instance metadata
+              /opt/aws/bin/cfn-hup || error_exit 'Failed to start cfn-hup'
+              # All done so signal success
+              /opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackId} --resource PublicLaunchTemplate --region ${AWS::Region}
+    Metadata:
+      Comment: Metadata description here.
+      AWS::CloudFormation::Init:
+        config:
+          packages:
+            yum:
+              httpd: []
+          files:
+            "/var/www/html/index.html":
+              content: !Sub |
+                Hello from ${AWS::StackId}.
+              mode: '000644'
+              owner: root
+              group: root
+          services:
+            sysvinit:
+              httpd:
+                enabled: true
+                ensureRunning: true
+
 #-------------------------------------------
 
 
